Set default font, bg color and scroll behavior

--- a/src/lib/global.scss
+++ b/src/lib/global.scss
@@ -1,9 +1,6 @@
-@use 'layout/layout';
+@use './global-defaults';
 
-@font-face {
-  font-family: 'Clearface';
-  src: url('/fonts/ClearfaceStd-Regular.otf');
-}
+@use 'layout/layout';
 
 
 .tile {
