--- a/src/lib/layout/layout-styles.scss
+++ b/src/lib/layout/layout-styles.scss
@@ -17,7 +17,7 @@ $_total-cols: 12;
 $_grid-gap: layout.$spacing;
 
 // Maximum width for the main content area.
-// Keep in sync with image-sizing.ts.
+// Keep in sync with TilePicture.svelte
 $_main-max-width: 45rem;
 
 // Minimum total horizontal margin for the main content area.
