--- a/src/lib/global.scss
+++ b/src/lib/global.scss
@@ -7,9 +7,9 @@
   border-radius: layout.$spacing;
   overflow: hidden;
 
-  outline: 1px solid black;
+  box-shadow: 0 0 0 1px black;
   &:focus-visible {
-    outline: 2px solid cyan;
+    box-shadow: 0 0 0 2px cyan;
   }
 }
 
