--- a/src/lib/global.scss
+++ b/src/lib/global.scss
@@ -42,6 +42,16 @@
   height: 100%;
 }
 
+.fill-contain {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.black-background {
+  background-color: black;
+}
+
 .user-select-none {
   user-select: none;
   -webkit-user-select: none;
