--- a/src/lib/global.scss
+++ b/src/lib/global.scss
@@ -69,6 +69,7 @@
 }
 
 .bg-black { background-color: black; }
+.color-white { color: white; }
 .highlight\:bg-dark-blue {
   &:hover,
   &:focus-within,
