--- a/src/lib/global.scss
+++ b/src/lib/global.scss
@@ -21,7 +21,7 @@
 }
 
 .animate-fade-in-out {
-  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  transition: transform 0.5s, opacity 0.5s;
 
   transform: translateY(0);
   opacity: 1;
