--- a/src/lib/layout/layout-styles.scss
+++ b/src/lib/layout/layout-styles.scss
@@ -17,8 +17,8 @@ $_total-cols: 12;
 $_grid-gap: layout.$spacing;
 
 // Maximum width for the main content area.
-// Keep in sync with TilePicture.svelte
-$_main-max-width: 45rem;
+// Keep in sync with layout.ts
+$_main-max-width: 55rem;
 
 // Minimum total horizontal margin for the main content area.
 $_main-maximized-margin-x: 2 * layout.$spacing;
