--- a/src/lib/layout/layout-styles.scss
+++ b/src/lib/layout/layout-styles.scss
@@ -105,3 +105,4 @@ $_gridA-col-width:
 
 .grid-area-music        { grid-area: _gridA-area(11, 5, 2, 2); }
 .grid-area-music-blank  { grid-area: _gridA-area(11, 1, 2, 4); }
+.grid-area-wetransfer   { grid-area: _gridA-area(11, 1, 2, 4); }
