--- a/src/lib/global-defaults.scss
+++ b/src/lib/global-defaults.scss
@@ -5,7 +5,7 @@
 
 html {
   background-color: #e5e5e5;
-  font-family: 'Roboto Mono', sans-serif;
+  font-family: 'Work Sans', sans-serif;
 
   // https://stackoverflow.com/questions/5303263/fix-font-size-issue-on-mobile-safari-iphone-where-text-is-rendered-inconsisten
   // https://github.com/ampproject/amphtml/issues/449
