--- a/src/lib/global.scss
+++ b/src/lib/global.scss
@@ -77,6 +77,13 @@
   height: 100%;
 }
 
+.fill-contain-left {
+  object-fit: contain;
+  object-position: left;
+  width: 100%;
+  height: 100%;
+}
+
 .rounded-border {
   border-radius: layout.$spacing;
 }
