--- a/src/lib/layout/layout-styles.scss
+++ b/src/lib/layout/layout-styles.scss
@@ -69,23 +69,32 @@ $_gridA-col-width:
 
 .grid-area-yt-gaming     { grid-area: _gridA-area(1, 1, 2, 2); }
 .grid-area-salem         { grid-area: _gridA-area(1, 3, 2, 4); }
+
 .grid-area-sj-sharks     { grid-area: _gridA-area(3, 1, 3, 3); }
 .grid-desc-sj-sharks     { position: absolute; grid-row: 6; }
-.grid-area-ninja         { grid-area: _gridA-area(3, 4, 1, 3); }
+.grid-area-wetransfer    { grid-area: _gridA-area(3, 4, 1, 3); }
+
+.grid-area-meta          { grid-area: _gridA-area(6, 1, 1, 3); }
 .grid-area-aapi          { grid-area: _gridA-area(4, 4, 3, 3); }
 .grid-desc-aapi          { position: absolute; grid-row: 7; }
-.grid-area-nymphs-tower  { grid-area: _gridB-area(6, 1, 3, 1); }
-.grid-desc-nymphs-tower  { position: absolute; grid-row: 9; }
-.grid-area-eyes          { grid-area: _gridB-area(6, 2, 1, 1); }
-.grid-area-reel          { grid-area: _gridB-area(7, 2, 2, 2); }
-.grid-area-pokemon       { grid-area: _gridB-area(7, 4, 2, 1); }
-.grid-desc-pokemon       { position: absolute; grid-row: 9; }
-.grid-area-amiibo        { grid-area: _gridB-area(9, 1, 2, 1); }
-.grid-desc-amiibo        { position: absolute; grid-row: 11; }
-.grid-area-play-magazine { grid-area: _gridB-area(9, 2, 2, 1); }
-.grid-desc-play-magazine { position: absolute; grid-row: 11; }
-.grid-area-wattam        { grid-area: _gridB-area(9, 3, 2, 2); }
-.grid-desc-wattam        { position: absolute; grid-row: 11; }
 
-.grid-area-music        { grid-area: _gridA-area(11, 5, 2, 2); }
-.grid-area-wetransfer   { grid-area: _gridA-area(11, 1, 2, 4); }
+.grid-area-nymphs-tower  { grid-area: _gridB-area(7, 1, 3, 1); }
+.grid-desc-nymphs-tower  { position: absolute; grid-row: 10; }
+.grid-area-eyes          { grid-area: _gridB-area(7, 2, 1, 1); }
+.grid-area-youtube       { grid-area: _gridB-area(7, 3, 1, 2); }
+
+.grid-area-reel          { grid-area: _gridB-area(8, 2, 2, 2); }
+.grid-area-pokemon       { grid-area: _gridB-area(8, 4, 2, 1); }
+.grid-desc-pokemon       { position: absolute; grid-row: 10; }
+
+.grid-area-amiibo        { grid-area: _gridB-area(10, 1, 2, 1); }
+.grid-desc-amiibo        { position: absolute; grid-row: 12; }
+.grid-area-play-magazine { grid-area: _gridB-area(10, 2, 2, 1); }
+.grid-desc-play-magazine { position: absolute; grid-row: 12; }
+.grid-area-wattam        { grid-area: _gridB-area(10, 3, 2, 2); }
+.grid-desc-wattam        { position: absolute; grid-row: 12; }
+
+.grid-area-ninja         { grid-area: _gridA-area(12, 1, 1, 3); }
+.grid-area-etaylor       { grid-area: _gridA-area(12, 4, 1, 3); }
+
+.grid-area-music         { grid-area: _gridA-area(13, 1, 2, 6); }
