make text align styles global

--- a/src/lib/global.scss
+++ b/src/lib/global.scss
@@ -126,3 +126,11 @@
   font-size: 0.8rem;
   font-weight: 300;
 }
+
+.text-align-center {
+  text-align: center;
+}
+
+.text-align-right {
+  text-align: right;
+}
