--- a/src/lib/layout/layout-styles.scss
+++ b/src/lib/layout/layout-styles.scss
@@ -95,6 +95,6 @@ $_gridA-col-width:
 .grid-desc-wattam        { position: absolute; grid-row: 12; }
 
 .grid-area-ninja         { grid-area: _gridA-area(12, 1, 1, 3); }
-.grid-area-etaylor       { grid-area: _gridA-area(12, 4, 1, 3); }
+.grid-area-etaf          { grid-area: _gridA-area(12, 4, 1, 3); }
 
 .grid-area-music         { grid-area: _gridA-area(13, 1, 2, 6); }
