--- a/src/lib/layout/layout-styles.scss
+++ b/src/lib/layout/layout-styles.scss
@@ -92,10 +92,10 @@ $_gridA-col-width:
 .grid-desc-amiibo        { position: absolute; grid-row: 12; }
 .grid-area-play-magazine { grid-area: _gridB-area(10, 2, 2, 1); }
 .grid-desc-play-magazine { position: absolute; grid-row: 12; }
-.grid-area-wattam        { grid-area: _gridB-area(10, 3, 2, 2); }
-.grid-desc-wattam        { position: absolute; grid-row: 12; }
+.grid-area-etaf          { grid-area: _gridB-area(10, 3, 1, 2); }
 
 .grid-area-ninja         { grid-area: _gridA-area(12, 1, 1, 3); }
-.grid-area-etaf          { grid-area: _gridA-area(12, 4, 1, 3); }
+.grid-area-wattam        { grid-area: _gridA-area(11, 4, 2, 3); }
+.grid-desc-wattam        { position: absolute; grid-row: 13; }
 
 .grid-area-music         { grid-area: _gridA-area(13, 1, 2, 6); }
